reset verifid
